添加部分示例代码

--- a/leisure-auth-model/pom.xml
+++ b/leisure-auth-model/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>leisure-auth-model</artifactId>
 
+    <dependencies>
 
+        <dependency>
+            <groupId>com.github.hicolors</groupId>
+            <artifactId>common-model</artifactId>
+        </dependency>
+
+    </dependencies>
 </project>
