--- a/leisure-auth-application/pom.xml
+++ b/leisure-auth-application/pom.xml
@@ -25,6 +25,16 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.hicolors</groupId>
+            <artifactId>common-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
