--- a/leisure-member-api/pom.xml
+++ b/leisure-member-api/pom.xml
@@ -19,5 +19,17 @@
             <version>${leisure-member.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 </project>
