--- a/leisure-member-model/pom.xml
+++ b/leisure-member-model/pom.xml
@@ -18,5 +18,15 @@
             <artifactId>common-model</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
