--- a/leisure-member-application/pom.xml
+++ b/leisure-member-application/pom.xml
@@ -15,14 +15,12 @@
 
         <dependency>
             <groupId>com.github.hicolors.leisure</groupId>
-            <artifactId>leisure-member-api</artifactId>
-            <version>${leisure-member.version}</version>
+            <artifactId>leisure-member-interface</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.github.hicolors</groupId>
             <artifactId>common-framework</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
