--- a/leisure-member-application/src/main/resources/application-dev.yml
+++ b/leisure-member-application/src/main/resources/application-dev.yml
@@ -3,3 +3,9 @@ spring:
     url: jdbc:mysql://47.105.97.16:3306/leisure_member?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
     username: root
     password: root
+  rabbitmq:
+    addresses: 47.101.155.253
+    port: 5672
+    username: leisure
+    password: leisure
+    publisher-confirms: true
