--- a/leisure-member-authorization/pom.xml
+++ b/leisure-member-authorization/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.hicolors</groupId>
+            <artifactId>common-exception</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
             <scope>provided</scope>
