--- a/leisure-member-sdk/pom.xml
+++ b/leisure-member-sdk/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>leisure-member</artifactId>
-        <groupId>com.github.life.lab.leisure</groupId>
+        <groupId>com.github.life-lab.leisure</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,12 +14,12 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.github.life.lab.leisure</groupId>
+            <groupId>com.github.life-lab.leisure</groupId>
             <artifactId>leisure-member-interface</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.github.life.lab</groupId>
+            <groupId>com.github.life-lab</groupId>
             <artifactId>common-feign</artifactId>
         </dependency>
 
