--- a/pom.xml
+++ b/pom.xml
@@ -66,4 +66,19 @@
 
     </dependencyManagement>
 
+    <distributionManagement>
+
+        <repository>
+            <id>rdc-releases</id>
+            <url>https://repo.rdc.aliyun.com/repository/39739-release-x5U75a/</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>rdc-snapshots</id>
+            <url>https://repo.rdc.aliyun.com/repository/39739-snapshot-AvLBWK/</url>
+        </snapshotRepository>
+
+    </distributionManagement>
+
+
 </project>
