--- a/leisure-member-interface/pom.xml
+++ b/leisure-member-interface/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>leisure-member</artifactId>
-        <groupId>com.github.life-lab.leisure</groupId>
+        <groupId>com.github.life-lab</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,8 +14,13 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.github.life-lab.leisure</groupId>
+            <groupId>com.github.life-lab</groupId>
             <artifactId>leisure-member-model</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.life-lab</groupId>
+            <artifactId>leisure-member-authorization</artifactId>
         </dependency>
 
         <dependency>
@@ -28,11 +33,6 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.life-lab.leisure</groupId>
-            <artifactId>leisure-member-authorization</artifactId>
         </dependency>
 
     </dependencies>
