--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.life-lab.leisure</groupId>
     <artifactId>leisure-member</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -39,25 +38,25 @@
         <dependencies>
 
             <dependency>
-                <groupId>com.github.life-lab.leisure</groupId>
+                <groupId>com.github.life-lab</groupId>
                 <artifactId>leisure-member-model</artifactId>
                 <version>${leisure-member.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>com.github.life-lab.leisure</groupId>
+                <groupId>com.github.life-lab</groupId>
                 <artifactId>leisure-member-authorization</artifactId>
                 <version>${leisure-member.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>com.github.life-lab.leisure</groupId>
+                <groupId>com.github.life-lab</groupId>
                 <artifactId>leisure-member-interface</artifactId>
                 <version>${leisure-member.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>com.github.life-lab.leisure</groupId>
+                <groupId>com.github.life-lab</groupId>
                 <artifactId>leisure-member-sdk</artifactId>
                 <version>${leisure-member.version}</version>
             </dependency>
