修复编译问题

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <groupId>com.github.life-lab</groupId>
         <artifactId>leisure</artifactId>
         <version>0.0.3-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <modules>
