--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,15 @@
         <groupId>com.github.life-lab</groupId>
         <artifactId>leisure</artifactId>
         <version>0.0.3-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <modules>
         <module>leisure-member-model</module>
         <module>leisure-member-interface</module>
         <module>leisure-member-sdk</module>
-        <module>leisure-member-application</module>
         <module>leisure-member-authorization</module>
+        <module>leisure-member-application</module>
     </modules>
 
     <properties>
