单元测试提交

--- a/leisure-member-application/src/test/resources/application.properties
+++ b/leisure-member-application/src/test/resources/application.properties
@@ -1,19 +1,19 @@
-# ·şÎñÆ÷¶Ë¿ÚºÅ
-server.port=7900 
-# ÊÇ·ñÉú³ÉddlÓï¾ä
-spring.jpa.generate-ddl=false 
-# ÊÇ·ñ´òÓ¡sqlÓï¾ä
-spring.jpa.show-sql=true 
-# ×Ô¶¯Éú³Éddl£¬ÓÉÓÚÖ¸¶¨ÁË¾ßÌåµÄddl£¬´Ë´¦ÉèÖÃÎªnone
-spring.jpa.hibernate.ddl-auto=none 
-# Ê¹ÓÃH2Êı¾İ¿â
-spring.datasource.platform=h2 
-# Ö¸¶¨Éú³ÉÊı¾İ¿âµÄschemaÎÄ¼şÎ»ÖÃ
-spring.datasource.schema=classpath:schema.sql 
-# Ö¸¶¨²åÈëÊı¾İ¿âÓï¾äµÄ½Å±¾Î»ÖÃ
-spring.datasource.data=classpath:data.sql 
-# ÅäÖÃÈÕÖ¾´òÓ¡ĞÅÏ¢
-logging.level.root=INFO 
+## ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ë¿Úºï¿½
+#server.port=7900
+## ï¿½Ç·ï¿½ï¿½ï¿½ï¿½ï¿½ddlï¿½ï¿½ï¿½
+#spring.jpa.generate-ddl=false
+## ï¿½Ç·ï¿½ï¿½Ó¡sqlï¿½ï¿½ï¿½
+#spring.jpa.show-sql=true
+## ï¿½Ô¶ï¿½ï¿½ï¿½ï¿½ï¿½ddlï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö¸ï¿½ï¿½ï¿½Ë¾ï¿½ï¿½ï¿½ï¿½ddlï¿½ï¿½ï¿½Ë´ï¿½ï¿½ï¿½ï¿½ï¿½Îªnone
+#spring.jpa.hibernate.ddl-auto=none
+## Ê¹ï¿½ï¿½H2ï¿½ï¿½ï¿½İ¿ï¿½
+#spring.datasource.platform=h2
+## Ö¸ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½İ¿ï¿½ï¿½schemaï¿½Ä¼ï¿½Î»ï¿½ï¿½
+#spring.datasource.schema=classpath:schema.sql
+## Ö¸ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½İ¿ï¿½ï¿½ï¿½ï¿½Ä½Å±ï¿½Î»ï¿½ï¿½
+#spring.datasource.data=classpath:data.sql
+## ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö¾ï¿½ï¿½Ó¡ï¿½ï¿½Ï¢
+#logging.level.root=INFO
 #logging.level.org.hibernate=INFO
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #logging.level.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
