--- a/leisure-member-sdk/pom.xml
+++ b/leisure-member-sdk/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>common-feign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
