--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.github.life-lab</groupId>
         <artifactId>leisure</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.6-RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
