--- a/leisure-member-application/src/main/resources/application-test.yml
+++ b/leisure-member-application/src/main/resources/application-test.yml
@@ -3,9 +3,15 @@ spring:
     url: jdbc:mysql://47.105.97.16:3306/l_member?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
     username: root
     password: root
+
   rabbitmq:
     addresses: 47.101.155.253
     port: 5672
     username: leisure
     password: leisure
     publisher-confirms: true
+
+  redis:
+    host: 47.105.97.16
+    port: 16379
+    database: 0
