--- a/leisure-member-authorization/pom.xml
+++ b/leisure-member-authorization/pom.xml
@@ -25,9 +25,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-            <scope>provided</scope>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.10.1</version>
         </dependency>
 
         <dependency>
