--- a/leisure-member-application/pom.xml
+++ b/leisure-member-application/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>leisure-member</artifactId>
         <groupId>com.github.life-lab</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -58,6 +58,11 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
+        <!--</dependency>-->
 
     </dependencies>
 
