--- a/leisure-member-application/src/main/resources/application-dev.yml
+++ b/leisure-member-application/src/main/resources/application-dev.yml
@@ -1,19 +1,18 @@
 spring:
   datasource:
-    url: jdbc:mysql://47.105.97.16:3306/l_member?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/l_member?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
     username: root
     password: root
   #  jpa:
   #    properties:
   #      hibernate.show_sql: true
   rabbitmq:
-    addresses: 47.101.155.253
+    addresses: 127.0.0.1
     port: 5672
-    username: leisure
-    password: leisure
-    publisher-confirms: true
+    username: root
+    password: root
 
   redis:
-    host: 47.105.97.16
-    port: 16379
+    host: 127.0.0.1
+    port: 6379
     database: 0
