--- a/leisure-member-application/src/main/resources/application.yml
+++ b/leisure-member-application/src/main/resources/application.yml
@@ -55,7 +55,7 @@ spring:
       hibernate.show_sql: false
       hibernate.current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
       hibernate.enable_lazy_load_no_trans: true
-      hibernate.session_factory.interceptor: com.github.life.lab.leisure.common.jpa.customiz.interceptor.BizInterceptor
+      hibernate.session_factory.interceptor: com.github.lifelab.leisure.common.jpa.customiz.interceptor.BizInterceptor
       hibernate.cache.use_second_level_cache: true
       hibernate.cache.use_query_cache: true
       hibernate.cache.use_structured_entries: true
