--- a/leisure-member-application/pom.xml
+++ b/leisure-member-application/pom.xml
@@ -66,6 +66,12 @@
         <!--<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
         <!--</dependency>-->
 
+        <!-- xxl-sso-core -->
+        <dependency>
+            <groupId>com.github.life-lab.sso</groupId>
+            <artifactId>xxl-sso-core</artifactId>
+            <version>1.1.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
